# etl_pandas

./: README.md  dados.parquet  etl.py  pipeline.py  pyproject.toml  utils_log.py
